--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   }
 }
